--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ div.errorMessage {
 /* styling cards on main postcard creation page */
 .box-shadow-card {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  width: 40rem;
 }
 
 .box-shadow-card-title {
@@ -53,10 +54,34 @@ div.errorMessage {
   font-weight: 500;
 }
 
+/* styling postcard destination form */
+form.destination input {
+  width: 30rem;
+  height: 2.5rem;
+  border-radius: 5px;
+  border-width: 1px;
+  padding: 10px;
+}
+
 /* styling address autocomplete dropdown */
 .autocomplete-dropdown-container {
   cursor: pointer;
 }
 
+div.dropdown {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  padding-top: 8px;
+}
+
+div.dropdown > span::before {
+  content: "📍  ";
+}
+
 .suggestion-item--active { background-color: #f5f5f5; }
 .suggestion-item { background-color: #ffffff; }
+
+.suggestion-item--active,
+.suggestion-item {
+  padding-left: 6px;
+  height: 2.5rem;
+}
