refactor moving state and state hooks from destination form to the parent container component

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ form.destination input {
   border-radius: 5px;
   border-width: 1px;
   padding: 10px;
+  margin: 8px 0;
 }
 
 /* styling address autocomplete dropdown */
