refactor to working combination of effect hooks for enabling/disabling checkout button

--- a/src/App.css
+++ b/src/App.css
@@ -51,10 +51,11 @@ div.errorMessage {
 }
 
 /* styling cards on main postcard creation page */
-.box-shadow-card {
+div.box-shadow-card {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   width: 40rem;
   background-image: var(--gradient-grey);
+  padding: 0.8rem 1.2rem;
 }
 
 .box-shadow-card-title {
