--- a/src/App.css
+++ b/src/App.css
@@ -159,3 +159,9 @@ button.paymentBtn:hover:disabled {
   -webkit-transform: none;
   transform: none;
 }
+
+/* styling error and success landing pages */
+img.error-illustration {
+  margin-top: 3rem;
+  height: 400px;
+}
