--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ button.paymentBtn:hover {
   height: 2.5rem;
   font-size: 18px;
   font-weight: 500;
-  margin: 1rem 0;
+  margin: 0.25rem 0 0.75rem;
 }
 
 button.paymentBtn {
@@ -164,19 +164,4 @@ button.paymentBtn:hover:disabled {
 img.error-illustration {
   margin-top: 3rem;
   height: 300px;
-}
-
-h4.mailed {
-  animation: fadeIn ease 1s;
-  color: var(--dark-green);
-}
-
-h4.mailed-failed {
-  animation: fadeIn ease 1s;
-  color: var(--dark-red);
-}
-
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
 }
